<resources>
    <!-- start -->
    <string name="app_name">kuboche</string>
    <string name="language">english · </string>
    <string name="Button1"> 切换</string>
    <string name="hint1">请输入用户名</string>
    <string name="hint2">请输入密码</string>
    <string name="logIn">登陆</string>
    <string name="signIn">新建酷泊车账户</string>
    <string name="changePassword">忘记密码</string>
    <string name="framework1">找车位</string>
    <string name="framework2">潘多拉魔盒</string>
    <string name="framework3">个人中心</string>
    <!-- splash -->
    <string name="onekey">一键\n找车位</string>
    <string name="result">查找结果</string>
    <string name="parkname">停车场</string>
    <string name="parkinfo">详细信息</string>
    <string name="endpark">结束停车</string>

    <!-- signin -->
    <string name="account">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="re_password">确认密码</string>
    <string name="signin">登录</string>
    <string name="set_answer">请设置答案</string>
    <string name="spin_title">请设置密保问题</string>

    <!-- change_password1 -->
    <string name="submit">提交</string>
    <string name="answer">请输入答案</string>

    <!-- change_password2 -->
    <string name="password2_1">请输入密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="confirm_password">确认密码</string>

    <!--change_password3-->
    <string name="new_password1">请确认新密码</string>

    <string-array name="question">
        <item>请设置密保问题</item>
        <item>爱人的生日</item>
        <item>妈妈的生日</item>
        <item>爸爸的生日</item>
        <item>女儿的生日</item>
        <item>儿子的生日</item>
    </string-array>

    <!-- pandora-->
    <string name="pandora_btn1">车位租赁</string>
    <string name="pandora_btn2">汽车服务</string>
    <string name="pandora_btn3">活动中心</string>
    <string name="parking_renting">车位租赁信息</string>
    <string name="automotive_service1">名称：汽车服务中心\n位置：XXXX\n
    距离：10km
    \n平均消费水平：1000</string>
    <!--about me-->
    <string name="aboutme_btn1">我的账户信息</string>
    <string name="securityAnswer">请输入密保答案</string>
    <string name="toast1">请先注册</string>
    <string name="toast2">账号不存在</string>
    <string name="aboutme_bt1">我的账户</string>
    <string name="aboutme_bt2">停车记录</string>
    <string name="aboutme_bt3">我的位置</string>
    <string name="aboutme_bt4">修改密码</string>
    <string name="aboutme_bt5">注销账号</string>
    <string name="park">号停车场</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="number">秒</string>
</resources>

