<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/framework"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/head1"
        style="@style/image"
        />

    <View style="@style/coverRoomView" />


    <EditText
        android:id="@+id/password2_1"
        android:hint="@string/new_password"
        style="@style/centerEditView"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/password2_2"
        android:hint="@string/new_password1"
        style="@style/centerEditView"
        android:inputType="textPassword"
        />

    <Button
        android:text="@string/submit"
        android:background="@drawable/btn_common"
        android:onClick="password6"
        style="@style/centerLongButton"/>


    <View style="@style/coverRoomView"  />


</LinearLayout>
