<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/framework"
    android:orientation="vertical"
    android:background="#ffffff">

    <Button
        android:background="@drawable/pan1"
        android:layout_margin="30dp"
        android:text="@string/pandora_btn1"
        android:id="@+id/pandora_btn1"
        style="@style/pandoraButton" />     <!--格式控制-->
    <Button
        android:background="@drawable/pan2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/pandora_btn2"
        android:id="@+id/pandora_btn2"
        style="@style/pandoraButton" />
    <Button
        android:background="@drawable/pan3"
        android:layout_margin="30dp"
        android:text="@string/pandora_btn3"
        android:id="@+id/pandora_btn3"
        style="@style/pandoraButton" />

</LinearLayout>
