<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:src="@drawable/head2"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/Button1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:onClick="changeLanguage"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint1"
        android:textSize="24sp"
        android:id="@+id/account"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint2"
        android:inputType="textPassword"
        android:textSize="24sp"
        android:id="@+id/password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_special"
        android:onClick="logIn"
        android:text="@string/logIn"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16dp" />

        <View
            android:layout_width="15dp"
            android:layout_height="15dp">
        </View>
    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_common"
        android:onClick="signIn"
        android:text="@string/signIn"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold" />
</LinearLayout>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="20dp"
    android:clickable="true"
    android:onClick="password1"
    android:text="@string/changePassword"
        android:textColor="@color/colorPrimaryDark" />
</LinearLayout>