<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/framework"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/head1"
        style="@style/image"
        />

    <View style="@style/coverRoomView" />


    <EditText
        android:id="@+id/password1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:textSize="32dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/password2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password1"
        android:textSize="32dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_common"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:onClick="password4"/>


    <View style="@style/coverRoomView"  />


</LinearLayout>
