<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:src="@drawable/p1"

        />

    <View
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />


    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/account"
        android:textSize="32dp"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/answer"
        android:textSize="32dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center_horizontal"
        android:background="#3f51b5"
        android:textColor="#e0e0e0"
        android:textSize="16dp"
        android:onClick="password2"/>


    <View
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />



</LinearLayout>