<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/head4" />
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tv1"
        style="@style/longButton"
        android:paddingTop="20dip"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:paddingLeft="20dip"
        android:textSize="24sp"
        android:layout_marginBottom="5dp"
        />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <Button

            android:id="@+id/aboutme_btn1"
            style="@style/longButton"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:text="@string/aboutme_bt1"
            android:gravity="left"
            android:paddingLeft="20dip"
            android:textSize="20sp"
            android:textColor="#000000"
            android:background="@null" />

        <Button
            android:id="@+id/aboutme_btn2"
            style="@style/longButton"
            android:layout_height="64dp"
            android:gravity="left"
            android:paddingLeft="20dip"
            android:text="@string/aboutme_bt2"
            android:textSize="20sp"
            android:textColor="#000000"
            android:background="@null" />

        <Button
            android:id="@+id/aboutme_btn3"
            style="@style/longButton"
            android:layout_height="64dp"
            android:gravity="left"
            android:paddingLeft="20dip"
            android:text="@string/aboutme_bt3"
            android:textSize="20sp"
            android:textColor="#000000"
            android:background="@null" />


        <Button
            android:id="@+id/aboutme_btn4"
            style="@style/longButton"
            android:layout_height="64dp"
            android:gravity="left"
            android:paddingLeft="20dip"
            android:text="@string/aboutme_bt4"
            android:textSize="20sp"
            android:textColor="#000000"
            android:background="@null" />

        <Button
            android:id="@+id/aboutme_btn5"
            style="@style/longButton"
            android:layout_height="64dp"
            android:gravity="left"
            android:paddingLeft="20dip"
            android:text="@string/aboutme_bt5"
            android:textSize="20sp"
            android:textColor="#000000"
            android:background="@null" />
    </LinearLayout>
</LinearLayout>
