<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/framework">
<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3f51b5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="酷泊车"
            android:textColor="#ffffff"
            android:textSize="24dp"
            android:padding="16dp"/>
    </LinearLayout>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/frame" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#B2EBF2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">
            <Button
                android:text="@string/framework1"
                android:onClick="loan"
                android:id="@+id/fragment1"
                android:drawableTop="@drawable/btn_1"
                style="@style/frameworkButton" />
            <Button
                android:text="@string/framework2"
                android:onClick="pandora"
                android:drawableTop="@drawable/btn_2"
                style="@style/frameworkButton" />
            <Button
                android:text="@string/framework3"
                android:onClick="about_me"
                android:drawableTop="@drawable/btn_3"
                style="@style/frameworkButton" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>